# psqlodbc

./: .gitignore  .gitmodules  BuildAll.bat  CONFIG_sample.txt  GNUmakefile  GNUmakefile.in  Makefile.am  Makefile.global.in  Makefile.in  README.unix  RELEASE.txt  SECURITY.md  aclocal.m4  bind.c  bind.h  bootstrap  buildInstallers.bat  buildx64.ps1  buildx86.ps1  catfunc.h  columninfo.c  columninfo.h  config.h.in  configure  configure.ac  connection.c  connection.h  connexp.h  convert.c  convert.h  descriptor.c  descriptor.h  dlg_specific.c  dlg_specific.h  dlg_wingui.c  drvconn.c  editConfiguration.bat  environ.c  environ.h  execute.c  (+100 more)
.github/workflows/: configuration.xml  linux.yml  main.yml  msbuild.yml  setenvx86.ps1  test.yml
config/: c-library.m4
docs/: README.txt  config-opt.html  config.html  faq.html  frame_adjust.js  howto-accesslo.html  howto-accessvba.html  howto-bo.html  howto-ch.html  howto-csharp.html  howto-debian.html  howto-redhat.html  howto-vb.html  howto-vblo.html  index.html  msdtc_pgxalib_tracing_README.txt  msdtc_pgxalib_tracing_disable.reg  msdtc_pgxalib_tracing_enable.reg  release-7.3.html  release.html  unix-compilation.html  win32-compilation.html
installer/: Make.bat  MakeX64.bat  README.txt  buildInstallers.ps1  buildX64-installer.ps1  buildX86-installer.ps1  installer.mak  lgpl.rtf  modify_msi.vbs  productcodes.mak  psqlodbc.wsi  psqlodbc.wsm  psqlodbc.wxs  psqlodbc_cpu.wxs  psqlodbcm.wxs  psqlodbcm_cpu.wxs  upgrade.bat  upgrade_x64.bat
installer/psqlodbc-setup/: Bundle.wxs  Make.bat  buildBootstrapper.ps1  psqlodbc-setup.wixproj  vcredist.wxs
test/: .gitignore  Makefile  Makefile.in  README.txt  RegisterRegdsn.c  launcher  launcher_i  odbc.ini  odbcini-gen.sh  odbcinst.ini  reset-db.c  runsuite.c  sampletables.sql  tests  win.mak
test/docs/: bracket-parse-analysis.md  bracket-parse-coverage-report.md
test/expected/: alter.out  alter_1.out  ard-bookmark-oom.out  arraybinding.out  async-enable.out  bindcol.out  bookmark.out  boolsaschar.out  bulkoperations.out  catalogfunctions.out  catalogfunctions_1.out  colattribute.out  colattribute_1.out  colattribute_2.out  commands.out  conn-settings.out  connect.out  cte.out  cursor-block-delete.out  cursor-commit.out  cursor-movement.out  cursor-movement_1.out  cursor-name.out  cursor-scrollable.out  cursors.out  cursors_1.out  cvtnulldate.out  dataatexecution.out  dbms-version.out  declare-fetch-block.out  declare-fetch-commit.out  deprecated.out  deprecated_1.out  deprecated_2.out  descrec.out  descrec_1.out  descrec_2.out  descriptors-free.out  diagnostic.out  diagnostic_1.out  (+48 more)
test/expected/v19/: error-rollback.out  quotes.out
test/sql/: .gitignore  sampletables.sql
test/src/: alter-test.c  ard-bookmark-oom-test.c  arraybinding-test.c  async-enable-test.c  bindcol-test.c  bookmark-test.c  boolsaschar-test.c  bracket-parse-test.c  bulkoperations-test.c  catalogfunctions-test.c  colattribute-test.c  commands-test.c  common.c  common.h  conn-settings-test.c  connect-test.c  cte-test.c  cursor-block-delete-test.c  cursor-commit-test.c  cursor-movement-test.c  cursor-name-test.c  cursor-scrollable-test.c  cursors-test.c  cvtnulldate-test.c  dataatexecution-test.c  dbms-version-test.c  declare-fetch-block-test.c  declare-fetch-commit-test.c  deprecated-test.c  descrec-test.c  descriptors-free-test.c  diagnostic-test.c  error-rollback-test.c  errors-test.c  fetch-refcursors-test.c  getresult-test.c  identity-test.c  insertreturning-test.c  interval-overflow-test.c  large-object-data-at-exec-test.c  (+28 more)
winbuild/: .gitignore  BuildAll.ps1  MSBuild-Get.psm1  MSProgram-Get.psm1  Psqlodbc-config.psm1  configuration.ps1  configuration_template.xml  editConfiguration.bat  editConfiguration.ps1  pgenlist.vcxproj  pguser.Cpp.props  pgxalib.vcxproj  platformbuild.vcxproj  psqlodbc.Cpp.props  psqlodbc.vcxproj  psqlsetup.vcxproj  readme.txt  regress.ps1  regress_one.vcxproj  setenv.ps1  std_dbmsname.Cpp.props
windev/: md5.c
